// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ArticleCard default view 1`] = `
<div
  className="card-wrapper"
>
  <div
    className="card"
  >
    <img
      alt="Article cover"
      className="card__thumbnail"
      src="https://i.postimg.cc/HnL9DLBq/gymnastics-1284656-1920.jpg"
    />
    <div
      className="card__body"
    >
      <h4
        className="card__body__category"
      >
        
      </h4>
      <h2
        className="card__body__title"
      >
        
      </h2>
      <div
        className="card__body__summary"
      >
        <p>
          
        </p>
      </div>
    </div>
    <div
      className="card__footer"
    >
      <img
        alt="loading..."
        className="card__footer__user-avatar"
        src="https://randomuser.me/api/portraits/men/32.jpg"
      />
      <div
        className="card__footer__views-holder"
      >
        <img
          alt="loading..."
          src="test-file-stub"
        />
        <span
          className="card__footer__total-views"
        >
          50
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ArticleCard with some props 1`] = `
<div
  className="card-wrapper"
>
  <div
    className="card"
  >
    <img
      alt="Article cover"
      className="card__thumbnail"
      src="https://i.postimg.cc/HnL9DLBq/gymnastics-1284656-1920.jpg"
    />
    <div
      className="card__body"
    >
      <h4
        className="card__body__category"
      >
        History
      </h4>
      <h2
        className="card__body__title"
      >
        This is the Card title.
      </h2>
      <div
        className="card__body__summary"
      >
        <p>
          The summary of the article is displayed on the card body.
        </p>
      </div>
    </div>
    <div
      className="card__footer"
    >
      <img
        alt="loading..."
        className="card__footer__user-avatar"
        src="https://randomuser.me/api/portraits/men/32.jpg"
      />
      <div
        className="card__footer__views-holder"
      >
        <img
          alt="loading..."
          src="test-file-stub"
        />
        <span
          className="card__footer__total-views"
        >
          50
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button add custom class 1`] = `
<button
  className="button__primary"
  id=""
  onClick={[Function]}
  type="button"
/>
`;

exports[`Storyshots Button with Login text 1`] = `
<button
  className="button__primary"
  id=""
  onClick={[Function]}
  type="button"
/>
`;

exports[`Storyshots Button with submit text 1`] = `
<button
  className="button__primary"
  id=""
  onClick={[Function]}
  type="button"
/>
`;

exports[`Storyshots Button without classname prop 1`] = `
<button
  className="button__primary"
  id=""
  onClick={[Function]}
  type="button"
/>
`;

exports[`Storyshots Icon active 1`] = `
<button
  aria-label="upvote"
  className="icon icon--upvote icon--active"
  onClick={[Function]}
  onKeyDown={[Function]}
  type="button"
/>
`;

exports[`Storyshots Icon downvote 1`] = `
<button
  aria-label="downvote"
  className="icon icon--downvote"
  onClick={[Function]}
  onKeyDown={[Function]}
  type="button"
/>
`;

exports[`Storyshots Icon upvote 1`] = `
<button
  aria-label="upvote"
  className="icon icon--upvote"
  onClick={[Function]}
  onKeyDown={[Function]}
  type="button"
/>
`;

exports[`Storyshots Input field with email name 1`] = `
<label
  className="input__label"
  htmlFor="email"
>
  <input
    className="input__field"
    name="email"
    onChange={[Function]}
    placeholder="Email"
    required="required"
    type="text"
  />
</label>
`;

exports[`Storyshots Input password field 1`] = `
<label
  className="input__label"
  htmlFor="email"
>
  <input
    className="input__field"
    name="email"
    onChange={[Function]}
    placeholder="Password"
    required="required"
    type="password"
  />
</label>
`;

exports[`Storyshots Modal click closed modal button 1`] = `
<div
  className="modal modal--hide"
>
  <div
    className="modal__modal-content"
  >
    <button
      className="modal__close"
      onClick={[Function]}
      type="button"
    >
      ✕
    </button>
    <div
      className="modal__left"
    >
      <h2
        className="modal__head"
      >
        Share your stories
      </h2>
      <h1
        className="modal__welcome"
      >
        Create your free account
      </h1>
      <p
        className="modal__text"
      >
        Sign into your account to serve you more personalised stories from creatives
      </p>
    </div>
    <div
      className="modal__right"
    >
      <h4
        className="modal__heading"
      >
        Select one to get started
      </h4>
      <div
        className="modal__social-login"
      >
        IBUKUN COMPONENT
      </div>
      <div
        className="modal__seperator"
      >
        <p>
          or
        </p>
      </div>
      <div
        className="modal__auth-component"
      >
        <div
          className="modal__social-login"
        >
          <div>
            <form
              className="form-wrapper"
              onSubmit={[Function]}
            >
              <div
                className="input-fields-row"
              >
                <label
                  className="form__label"
                  htmlFor="firstName"
                >
                  <label
                    className="input__label"
                    htmlFor="firstName"
                  >
                    <input
                      className="input__field"
                      name="firstName"
                      onChange={[Function]}
                      placeholder="First Name"
                      required="required"
                      type="text"
                    />
                  </label>
                  <span
                    className="form__errors"
                  >
                    
                  </span>
                </label>
                <label
                  className="form__label"
                  htmlFor="lastName"
                >
                  <label
                    className="input__label"
                    htmlFor="lastName"
                  >
                    <input
                      className="input__field"
                      name="lastName"
                      onChange={[Function]}
                      placeholder="Last Name"
                      required="required"
                      type="text"
                    />
                  </label>
                  <span
                    className="form__errors"
                  >
                    
                  </span>
                </label>
              </div>
              <div
                className="input-fields-row"
              >
                <label
                  className="form__label"
                  htmlFor="userName"
                >
                  <label
                    className="input__label"
                    htmlFor="userName"
                  >
                    <input
                      className="input__field"
                      name="userName"
                      onChange={[Function]}
                      placeholder="Username"
                      required="required"
                      type="text"
                    />
                  </label>
                  <span
                    className="form__errors"
                  >
                    
                  </span>
                </label>
                <label
                  className="form__label"
                  htmlFor="email"
                >
                  <label
                    className="input__label"
                    htmlFor="email"
                  >
                    <input
                      className="input__field"
                      name="email"
                      onChange={[Function]}
                      placeholder="Email"
                      required="required"
                      type="text"
                    />
                  </label>
                  <span
                    className="form__errors"
                  >
                    
                  </span>
                </label>
              </div>
              <div
                className="input-fields-row"
              >
                <label
                  className="form__label"
                  htmlFor="password"
                >
                  <label
                    className="input__label"
                    htmlFor="password"
                  >
                    <input
                      className="input__field"
                      name="password"
                      onChange={[Function]}
                      placeholder="Password"
                      required="required"
                      type="password"
                    />
                  </label>
                  <span
                    className="form__errors"
                  >
                    
                  </span>
                </label>
                <label
                  className="form__label"
                  htmlFor="password"
                >
                  <label
                    className="input__label"
                    htmlFor="confirmPassword"
                  >
                    <input
                      className="input__field"
                      name="confirmPassword"
                      onChange={[Function]}
                      placeholder="Confirm Password"
                      required="required"
                      type="password"
                    />
                  </label>
                  <span
                    className="form__errors"
                    id="shwMessage"
                  >
                    
                  </span>
                </label>
              </div>
              <div
                className="btn-section"
              >
                <button
                  className="form__submit-btn"
                  id=""
                  type="submit"
                >
                  Signup
                </button>
              </div>
            </form>
          </div>
        </div>
        <div
          className="modal__setup-tag"
        >
          <p>
            Already have an account ? 
            <button
              className="modal__create-account"
              onClick={[Function]}
              type="button"
            >
              Sign in
            </button>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Modal click sign in 1`] = `
<div
  className="modal modal--show"
>
  <div
    className="modal__modal-content"
  >
    <button
      className="modal__close"
      onClick={[Function]}
      type="button"
    >
      ✕
    </button>
    <div
      className="modal__left"
    >
      <h2
        className="modal__head"
      >
        Share your stories
      </h2>
      <h1
        className="modal__welcome"
      >
        Welcome back
      </h1>
      <p
        className="modal__text"
      >
        Sign into your account to serve you more personalised stories from creatives
      </p>
    </div>
    <div
      className="modal__right"
    >
      <h4
        className="modal__heading"
      >
        Select one to get started
      </h4>
      <div
        className="modal__social-login"
      >
        IBUKUN COMPONENT
      </div>
      <div
        className="modal__seperator"
      >
        <p>
          or
        </p>
      </div>
      <div
        className="modal__auth-component"
      >
        <form
          className="login-form"
          onSubmit={[Function]}
        >
          <div
            className="login-form__success login-form__success--hide"
          >
            SIGNIN SUCCESSFUL !
          </div>
          <label
            className="input__label"
            htmlFor="email"
          >
            <input
              className="input__field"
              name="email"
              onChange={[Function]}
              placeholder="Email Address"
              required="required"
              type="text"
            />
          </label>
          <label
            className="input__label"
            htmlFor="password"
          >
            <input
              className="input__field"
              name="password"
              onChange={[Function]}
              placeholder="Password"
              required="required"
              type="password"
            />
          </label>
          <section
            className="login-form__errors"
          />
          <section
            className="login-form__submit-btn"
          >
            <button
              className="button__primary"
              id=""
              type="submit"
            />
          </section>
        </form>
        <div
          className="modal__setup-tag"
        >
          <p>
            Don't have an account ? 
            <button
              className="modal__create-account"
              onClick={[Function]}
              type="button"
            >
              Sign up
            </button>
          </p>
          <p>
            Forgot your password ?  
            <span
              className="modal__create-account"
            >
              Reset password
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Modal default signup view 1`] = `
<div
  className="modal modal--show"
>
  <div
    className="modal__modal-content"
  >
    <button
      className="modal__close"
      onClick={[Function]}
      type="button"
    >
      ✕
    </button>
    <div
      className="modal__left"
    >
      <h2
        className="modal__head"
      >
        Share your stories
      </h2>
      <h1
        className="modal__welcome"
      >
        Create your free account
      </h1>
      <p
        className="modal__text"
      >
        Sign into your account to serve you more personalised stories from creatives
      </p>
    </div>
    <div
      className="modal__right"
    >
      <h4
        className="modal__heading"
      >
        Select one to get started
      </h4>
      <div
        className="modal__social-login"
      >
        IBUKUN COMPONENT
      </div>
      <div
        className="modal__seperator"
      >
        <p>
          or
        </p>
      </div>
      <div
        className="modal__auth-component"
      >
        <div
          className="modal__social-login"
        >
          <div>
            <form
              className="form-wrapper"
              onSubmit={[Function]}
            >
              <div
                className="input-fields-row"
              >
                <label
                  className="form__label"
                  htmlFor="firstName"
                >
                  <label
                    className="input__label"
                    htmlFor="firstName"
                  >
                    <input
                      className="input__field"
                      name="firstName"
                      onChange={[Function]}
                      placeholder="First Name"
                      required="required"
                      type="text"
                    />
                  </label>
                  <span
                    className="form__errors"
                  >
                    
                  </span>
                </label>
                <label
                  className="form__label"
                  htmlFor="lastName"
                >
                  <label
                    className="input__label"
                    htmlFor="lastName"
                  >
                    <input
                      className="input__field"
                      name="lastName"
                      onChange={[Function]}
                      placeholder="Last Name"
                      required="required"
                      type="text"
                    />
                  </label>
                  <span
                    className="form__errors"
                  >
                    
                  </span>
                </label>
              </div>
              <div
                className="input-fields-row"
              >
                <label
                  className="form__label"
                  htmlFor="userName"
                >
                  <label
                    className="input__label"
                    htmlFor="userName"
                  >
                    <input
                      className="input__field"
                      name="userName"
                      onChange={[Function]}
                      placeholder="Username"
                      required="required"
                      type="text"
                    />
                  </label>
                  <span
                    className="form__errors"
                  >
                    
                  </span>
                </label>
                <label
                  className="form__label"
                  htmlFor="email"
                >
                  <label
                    className="input__label"
                    htmlFor="email"
                  >
                    <input
                      className="input__field"
                      name="email"
                      onChange={[Function]}
                      placeholder="Email"
                      required="required"
                      type="text"
                    />
                  </label>
                  <span
                    className="form__errors"
                  >
                    
                  </span>
                </label>
              </div>
              <div
                className="input-fields-row"
              >
                <label
                  className="form__label"
                  htmlFor="password"
                >
                  <label
                    className="input__label"
                    htmlFor="password"
                  >
                    <input
                      className="input__field"
                      name="password"
                      onChange={[Function]}
                      placeholder="Password"
                      required="required"
                      type="password"
                    />
                  </label>
                  <span
                    className="form__errors"
                  >
                    
                  </span>
                </label>
                <label
                  className="form__label"
                  htmlFor="password"
                >
                  <label
                    className="input__label"
                    htmlFor="confirmPassword"
                  >
                    <input
                      className="input__field"
                      name="confirmPassword"
                      onChange={[Function]}
                      placeholder="Confirm Password"
                      required="required"
                      type="password"
                    />
                  </label>
                  <span
                    className="form__errors"
                    id="shwMessage"
                  >
                    
                  </span>
                </label>
              </div>
              <div
                className="btn-section"
              >
                <button
                  className="form__submit-btn"
                  id=""
                  type="submit"
                >
                  Signup
                </button>
              </div>
            </form>
          </div>
        </div>
        <div
          className="modal__setup-tag"
        >
          <p>
            Already have an account ? 
            <button
              className="modal__create-account"
              onClick={[Function]}
              type="button"
            >
              Sign in
            </button>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Signin sign in form 1`] = `
<form
  className="login-form"
  onSubmit={[Function]}
>
  <div
    className="login-form__success login-form__success--hide"
  >
    SIGNIN SUCCESSFUL !
  </div>
  <label
    className="input__label"
    htmlFor="email"
  >
    <input
      className="input__field"
      name="email"
      onChange={[Function]}
      placeholder="Email Address"
      required="required"
      type="text"
    />
  </label>
  <label
    className="input__label"
    htmlFor="password"
  >
    <input
      className="input__field"
      name="password"
      onChange={[Function]}
      placeholder="Password"
      required="required"
      type="password"
    />
  </label>
  <section
    className="login-form__errors"
  />
  <section
    className="login-form__submit-btn"
  >
    <button
      className="button__primary"
      id=""
      type="submit"
    />
  </section>
</form>
`;

exports[`Storyshots Vote downvoted 1`] = `
<div
  className="vote"
>
  <div
    className="vote__wrapper"
  >
    <button
      aria-label="upvote"
      className="icon icon--upvote"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    />
    <span
      className=""
    >
      29
    </span>
  </div>
  <div
    className="vote__wrapper"
  >
    <button
      aria-label="downvote"
      className="icon icon--downvote icon--active"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    />
    <span
      className="active"
    >
      11
    </span>
  </div>
</div>
`;

exports[`Storyshots Vote nullvote 1`] = `
<div
  className="vote"
>
  <div
    className="vote__wrapper"
  >
    <button
      aria-label="upvote"
      className="icon icon--upvote"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    />
    <span
      className=""
    >
      29
    </span>
  </div>
  <div
    className="vote__wrapper"
  >
    <button
      aria-label="downvote"
      className="icon icon--downvote"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    />
    <span
      className=""
    >
      10
    </span>
  </div>
</div>
`;

exports[`Storyshots Vote upvoted 1`] = `
<div
  className="vote"
>
  <div
    className="vote__wrapper"
  >
    <button
      aria-label="upvote"
      className="icon icon--upvote icon--active"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    />
    <span
      className="active"
    >
      30
    </span>
  </div>
  <div
    className="vote__wrapper"
  >
    <button
      aria-label="downvote"
      className="icon icon--downvote"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    />
    <span
      className=""
    >
      10
    </span>
  </div>
</div>
`;
